# ChainFury

./: .env.sample  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  Dockerfile.private  LICENSE  README-old.md  README.md  build_ui.sh  conf.py  private.sh  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: release-please.yml  static.yml
api_docs/: conf.py  index.rst  install.rst  usage.rst
api_docs/_build/doctrees/: environment.pickle  index.doctree  install.doctree  usage.doctree
api_docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
api_docs/cf_server/: chainfury_server.api.auth.rst  chainfury_server.api.chains.rst  chainfury_server.api.chatbot.rst  chainfury_server.api.dashboard.rst  chainfury_server.api.feedback.rst  chainfury_server.api.fury.rst  chainfury_server.api.intermediate_steps.rst  chainfury_server.api.langflow.rst  chainfury_server.api.metrics.rst  chainfury_server.api.prompts.rst  chainfury_server.api.rst  chainfury_server.api.template.rst  chainfury_server.api.user.rst  chainfury_server.app.rst  chainfury_server.commons.config.rst  chainfury_server.commons.constants.rst  chainfury_server.commons.gpt_rating.rst  chainfury_server.commons.metrics_utils.rst  chainfury_server.commons.rst  chainfury_server.commons.types.rst  chainfury_server.commons.utils.rst  chainfury_server.database.rst  chainfury_server.database_constants.rst  chainfury_server.database_utils.chatbot.rst  chainfury_server.database_utils.dashboard.rst  chainfury_server.database_utils.general_utils.rst  chainfury_server.database_utils.intermediate_step.rst  chainfury_server.database_utils.prompt.rst  chainfury_server.database_utils.rst  chainfury_server.engines.fury.rst  chainfury_server.engines.langflow.rst  chainfury_server.engines.registry.rst  chainfury_server.engines.rst  chainfury_server.plugins.base.rst  chainfury_server.plugins.echo.rst  chainfury_server.plugins.handler.rst  chainfury_server.plugins.loader.rst  chainfury_server.plugins.rst  chainfury_server.rst  chainfury_server.schemas.prompt_schema.rst  (+5 more)
api_docs/examples/: agent-theory.rst  components-list.rst  functional-chains.rst  install.rst  qa-rag.rst  stability-apis.rst  storing-private-data.rst  usage-hardcore.rst  vector-db-use.rst
api_docs/source/: chainfury.agent.rst  chainfury.components.ai_actions.rst  chainfury.components.functional.rst  chainfury.components.openai.rst  chainfury.components.redis.rst  chainfury.components.rst  chainfury.components.stability.rst  chainfury.components.tune.rst  chainfury.types.rst  chainfury.utils.rst  chainfury.version.rst  modules.rst
api_docs/templates/: components-list.rst
chainfury/: __init__.py  __main__.py  agent.py  base.py  chat.py  cli.py  client.py  core.py  types.py  utils.py  version.py
chainfury/components/: __init__.py  const.py
chainfury/components/ai_actions/: __init__.py
chainfury/components/functional/: __init__.py
chainfury/components/nbx/: __init__.py
chainfury/components/openai/: __init__.py
chainfury/components/qdrant/: __init__.py
chainfury/core/: __init__.py  actions.py  memory.py  models.py
client/: .env.example  .prettierrc  index.html  package.json  tailwind.config.js
client/src/: App.tsx  index.css  index.d.ts  main.tsx
extra/ex1/: chain.py
plugins/: README.md  load.py
plugins/nbx/: __init__.py
scripts/: build_and_copy.sh  list_builtins.py
server/: README.md  app.py  chain.db  database.py  database_constants.py  pyproject.toml  requirements.txt  server.py  test.sh
server/api/: auth.py  chatbot.py  components.py  dashboard.py  feedback.py  fury.py  gpt_rating.py  gptrating.py  intermediate_steps.py  langflow.py  metrics.py  prompts.py  template.py  user.py
server/chainfury_server/: __main__.py  app.py  database.py  database_constants.py  engine.py  landing.py  server.py  ui.py  utils.py  version.py
server/chainfury_server/api/: auth.py  chains.py  chatbot.py  dashboard.py  feedback.py  fury.py  intermediate_steps.py  langflow.py  metrics.py  prompts.py  template.py  user.py
server/chainfury_server/api_v2/: chains.py  chatbot.py  fury.py  prompts.py
server/chainfury_server/commons/: config.py  gpt_rating.py  types.py  utils.py
server/chainfury_server/database_utils/: chatbot.py  dashboard.py  general_utils.py  intermediate_step.py  prompt.py
server/chainfury_server/engines/: __init__.py  fury.py  langflow.py  registry.py
server/chainfury_server/examples/: cf_chuck_norris.json  cf_serper_summarizer.json  index.json  lf_basic_template.json
server/chainfury_server/plugins/: __init__.py  base.py  handler.py  loader.py
server/chainfury_server/plugins/echo/: __init__.py
server/chainfury_server/plugins/nbx/: __init__.py  lmao.py  utils.py
server/chainfury_server/schemas/: prompt_schema.py
server/commons/: config.py  fury_utils.py  gpt_rating.py  langflow_utils.py  types.py  utils.py
server/components/: README.md  __init__.py
server/components/ai_actions/: __init__.py
server/components/ai_agents/: __init__.py
server/components/functional/: __init__.py
server/components/nbx/: __init__.py
server/components/openai/: __init__.py
server/components/stability/: __init__.py
server/database_utils/: chatbot.py  dashboard.py  intermediate_step.py  prompt.py
server/examples/: fury.json  fury_index.json  index.json  serper_summarizer.json
server/fury/: __init__.py  agent.py  base.py  process.py  utils.py
server/plugins/: README.md  __init__.py  base.py  event.py  handler.py  loader.py
server/plugins/echo/: __init__.py
server/plugins/nbx/: README.md  __init__.py  lmao.py  utils.py
server/schemas/: prompt_schema.py
server/stories/: __init__.py  api.py  dag.json  fury.json  fury.py  fury_algo.py  fury_core.py  fury_form.py  plugins.py
server/tests/: plugins.py
stories/: fury.json  fury_algo.py  fury_core.py  fury_form.py  fury_to_db.py  test.sh  test_core.py  test_getkv.py
tests/: __main__.py  base.py  chains.py  getkv.py  main.py  test_base_chain2.py  test_base_types.py
(+117 files in other folders)
