[tool.poetry]
name = "chainfury"
version = "1.4.3"
description = "ChainFury is a powerful tool that simplifies the creation and management of chains of prompts, making it easier to build complex chat applications using LLMs."
authors = ["NimbleBox Engineering <engineering@nimblebox.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/NimbleBoxAI/ChainFury"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
fire = "0.5.0"
Jinja2 = "3.1.2"
jinja2schema = "0.1.4"
pydantic = "^1.10.7"
requests = "^2.28.2"
stability-sdk = { version = "0.8.3", optional = true }
qdrant-client = { version = "1.3.1", optional = true }
boto3 = { version = "1.28.15", optional = true }

[tool.poetry.extras]
all = [
  "stability-sdk",
  "qdrant-client",
  "boto3"
]

stability = ["stability-sdk"]
qdrant = ["qdrant-client"]

[tool.poetry.scripts]
chainfury = "chainfury.cli:main"
cf = "chainfury.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
