[tool.poetry]
name = "chainfury"
version = "1.7.0a2"
description = "ChainFury is a powerful tool that simplifies the creation and management of chains of prompts, making it easier to build complex chat applications using LLMs."
authors = ["Tune AI <engineering@nimblebox.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/NimbleBoxAI/ChainFury"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
tuneapi = "0.1.1"
fire = "0.5.0"
Jinja2 = "3.1.2"
jinja2schema = "0.1.4"
pydantic = "2.6.1"
requests = "^2.31.0"
python-dotenv = "1.0.0"
urllib3 = ">=1.26.18"
tabulate = "0.9.0"
cryptography = ">=41.0.6"
boto3 = { version = "1.29.6", optional = true }

[tool.poetry.extras]
all = ["boto3"]

[tool.poetry.group.dev.dependencies]
sphinx = "7.2.5"
sphinx_rtd_theme = "1.3.0"
poetry = "1.6.1"

[tool.poetry.scripts]
chainfury = "chainfury.cli:main"
cf = "chainfury.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
