[tool.poetry]
name = "chainfury_server"
version = "1.1.0"
description = "ChainFury Server is the open source server for running ChainFury Engine!"
authors = ["NimbleBox Engineering <engineering@nimblebox.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/NimbleBoxAI/ChainFury"
include = ["chainfury_server/static/*", "chainfury_server/static/*/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
black = "23.3.0"
chainfury = "*"
fastapi = "0.95.2"
fire = "0.5.0"
passlib = "1.7.4"
PyJWT = { version = "2.6.0", extras = ["crypto"] }
requests = "2.28.2"
SQLAlchemy = "1.4.47"
uvicorn = "0.20.0"
PyMySQL = "1.0.3"
chromadb = { version = "0.3.21", optional = true }
dill = { version = "0.3.6", optional = true }
docstring-parser = { version = "0.15", optional = true }
fake-useragent = { version = "1.2.1", optional = true }
google-api-python-client = { version = "2.86.0", optional = true }
google-search-results = { version = "2.4.2", optional = true }
huggingface-hub = { version = "0.13.4", optional = true }
langchain = { version = ">=0.0.186", optional = true }
# langflow = { version = "0.0.89", optional = true }
lxml = { version = "4.9.2", optional = true }
networkx = { version = "3.1", optional = true }
openai = { version = ">=0.27.7", optional = true }
pandas = { version = "1.5.3", optional = true }
psycopg2-binary = { version = "2.9.6", optional = true }
pyarrow = { version = "11.0.0", optional = true }
pypdf = { version = "3.8.1", optional = true }
pysrt = { version = "1.1.2", optional = true }
rich = { version = "13.3.4", optional = true }
typer = { version = "0.7.0", optional = true }
types-pyyaml = { version = "6.0.12.9", optional = true }
unstructured = { version = ">=0.5.11", optional = true }

[tool.poetry.extras]
langflow = [
  "chromadb",
  "dill",
  "docstring-parser",
  "fake-useragent",
  "google-api-python-client",
  "google-search-results",
  "huggingface-hub",
  "langchain",
  "langflow",
  "lxml",
  "networkx",
  "openai",
  "pandas",
  "psycopg2-binary",
  "pyarrow",
  "PyMySQL",
  "pypdf",
  "pysrt",
  "rich",
  "typer",
  "types-pyyaml",
  "unstructured"
]

[tool.poetry.scripts]
chainfury_server = "chainfury_server.server:main"
cf_server = "chainfury_server.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
