[tool.poetry]
name = "chainfury_server"
version = "2.0.2"
description = "ChainFury Server is the open source server for running ChainFury Engine!"
authors = ["NimbleBox Engineering <engineering@nimblebox.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/NimbleBoxAI/ChainFury"
include = ["chainfury_server/static/*", "chainfury_server/static/*/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
black = "23.3.0"
chainfury = "*"
fastapi = "0.95.2"
fire = "0.5.0"
passlib = "1.7.4"
PyJWT = { version = "2.6.0", extras = ["crypto"] }
requests = "^2.31.0"
SQLAlchemy = "1.4.47"
uvicorn = "0.20.0"
PyMySQL = "1.0.3"
urllib3 = ">=1.26.18"
"cryptography" = ">=41.0.6"

[tool.poetry.scripts]
chainfury_server = "chainfury_server.server:main"
cf_server = "chainfury_server.server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
