# Copyright © 2023- Frello Technology Private Limited

[tool.poetry]
name = "chainfury_server"
version = "2.1.2a"
description = "ChainFury Server is the DB + API server for managing the ChainFury engine in production. Used in production at chat.tune.app"
authors = ["Tune AI <engineering@nimblebox.ai>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/NimbleBoxAI/ChainFury"
include = ["chainfury_server/static/*", "chainfury_server/static/*/*"]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
black = "23.3.0"
fastapi = "^0.109.2"
fire = "0.5.0"
passlib = "1.7.4"
PyJWT = { version = "2.6.0", extras = ["crypto"] }
requests = "^2.31.0"
SQLAlchemy = "1.4.47"
uvicorn = "0.27.1"
PyMySQL = "1.0.3"
urllib3 = ">=1.26.18"
"cryptography" = ">=41.0.6"

[tool.poetry.scripts]
chainfury_server = "chainfury_server:__main__"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
